<resources>
    <string name="app_name">The Recipes Bank</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="Register">Or Create a new Account</string>
    <string name="sign_up">Join Us :)</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="log_in_R">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repPassword">Repeat Password</string>
<<<<<<< Updated upstream
    <string name="username">Username</string>
=======
    <string name="descripe_your_recipy">Descripe Your Recipy:</string>
>>>>>>> Stashed changes

</resources>
